[package]
name = "meta-tune"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
rspotify = { version = "0.11.7" }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
