[package]
name = "meta-tune"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
itertools = "0.10.5"
rspotify = { version = "0.11.7" }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
hyper = "0.14.27"
hyper-tls = "0.5.0"
regex = "1.9.5"